# Learn_C_language

./: CMakeLists.txt  CMakePresets.json
Chapter_10/: CMakeLists.txt  Homework_10.c  Questions_10.c  Theory_10.c
Chapter_2/: CMakeLists.txt  Homework_2.c
Chapter_3/: CMakeLists.txt  Homework_3.c
Chapter_4/: CMakeLists.txt  Homework_4.c
Chapter_5/: CMakeLists.txt  Homework_5.c
Chapter_6/: CMakeLists.txt  Homework_6.c
Chapter_7/: CMakeLists.txt  Homework_7.c
Chapter_8/: CMakeLists.txt  Homework_8.c
Chapter_9/: CMakeLists.txt  Homework_9.c  Questions_9.c
