cmake_minimum_required (VERSION 3.25)
project ("Learn_C")
add_subdirectory ("Chapter_2")
add_subdirectory ("Chapter_3")
add_subdirectory ("Chapter_4")
add_subdirectory ("Chapter_5")
add_subdirectory ("Chapter_6")
add_subdirectory ("Chapter_7")
add_subdirectory ("Chapter_8")
add_subdirectory ("Chapter_9")
add_subdirectory ("Chapter_10")
